ChangeLog:
PLEASE MAINTAIN, UPDATE WHATEVER YOU CHANGED, 
WITHIN this file

FORMAT : 
_Serial No._
_Name_
_Date/Time of changes_
_What Exactly did you change_

(01)Kavin
09/09/2025 - 05:40PM 
Added the Base Repository named, *clonefest_w2*

(02)Apoorva
09/09/2025 - 5:55PM
Added the folder called "Backend". Contains user code that DOES NOT have authentication. Also contains album code that is UNTESTED.

(03)Apoorva
10/09/2025 - 8:42PM
Backend code for album is now tested and working. Added code for image CRUD.